src/main/resources/style.css
.root{
    -fx-font-size: 17pt;
    -fx-font-family: "Agency FB";
    -fx-text-fill: #9b6029;
    -fx-background-image: url("/images/background_setup.png");
    -fx-background-size: cover;
}

#titleScene{
    -fx-background-image: url("/images/title.png");
    -fx-background-size: cover;
}

#boardScene{
    -fx-background-image: url("/images/Table.png");
    -fx-background-size: cover;
}

#boardTitle{
    -fx-font-size: 24pt;
    -fx-wrap-text: true;
    -fx-font-weight: bold;
    -fx-text-fill: whitesmoke;
}

#boardSubtitle{
    -fx-wrap-text: true;
    -fx-text-fill: whitesmoke;
}

#boardPlayerName{
    -fx-text-fill: white;
    -fx-font-weight: bold;
}

.label {
    -fx-font-size: 17pt;
    -fx-font-family: "Agency FB";
    -fx-text-fill: #9b6029;
    -fx-font-weight: bold;
}

.button{
    -fx-background-image: url("/images/btn_blue.png");
    -fx-background-size: cover;
    -fx-background-color: transparent;
    -fx-background-repeat: no-repeat;
    -fx-background-position: center;
    -fx-text-fill: rgb(255, 255, 255);
    -fx-font-size: 13pt;
    -fx-font-family: "Agency FB";
}

.button:pressed{
    -fx-background-image: url("/images/btn_blue_pressed.png");
    -fx-background-size: cover;
    -fx-background-color: transparent;
    -fx-background-repeat: no-repeat;
    -fx-background-position: center;
    -fx-text-fill: rgb(255, 255, 255);
    -fx-font-size: 13pt;
    -fx-font-family: "Agency FB";
}

#buttonPlay{
    -fx-background-image: url("/images/button_play_normal.png");
    -fx-background-size: cover;
    -fx-background-color: transparent;
    -fx-background-repeat: no-repeat;
    -fx-background-position: center;
}

#buttonPlay:hover{
    -fx-scale-x: 1.1;
    -fx-scale-y: 1.1;
    -fx-scale-z: 1.1;
}

#buttonPlay:pressed{
    -fx-background-image: url("/images/button_play_down.png");
    -fx-background-size: cover;
    -fx-background-color: transparent;
    -fx-background-repeat: no-repeat;
    -fx-background-position: center;
}

#godButton{
    -fx-text-fill: transparent;
}

#godButton:hover{
    -fx-scale-x: 1.05;
    -fx-scale-y: 1.05;
    -fx-scale-z: 1.05;
}

#godButton:disabled{
    -fx-opacity: 0.3;
}

#godButton:selected{
    -fx-opacity: 1;
    -fx-scale-x: 1.2;
    -fx-scale-y: 1.2;
    -fx-scale-z: 1.2;
}

.radio-button{
    -fx-font-size: 17pt;
    -fx-font-family: "Agency FB";
    -fx-text-fill: #9b6029;
    -fx-font-weight: bold;
}

#redButton{
    -fx-background-image: url("/images/workers/worker_red_pressed.png");
    -fx-background-size: cover;
}

#redButton:hover {
    -fx-scale-x: 1.05;
    -fx-scale-y: 1.05;
    -fx-scale-z: 1.05;
    -fx-background-size: cover;
}

#redButton:disabled{
    -fx-opacity: 0.3;
}

#redButton:selected{
    -fx-background-image: url("/images/workers/worker_red_normal.png");
    -fx-background-size: cover;
    -fx-opacity: 1;
    -fx-scale-x: 1.3;
    -fx-scale-y: 1.3;
    -fx-scale-z: 1.3;
}

#blueButton{
    -fx-background-image: url("/images/workers/worker_blue_pressed.png");
    -fx-background-size: cover;
}

#blueButton:disabled{
    -fx-opacity: 0.3;
}

#blueButton:hover {
    -fx-scale-x: 1.05;
    -fx-scale-y: 1.05;
    -fx-scale-z: 1.05;
}

#blueButton:selected{
    -fx-background-image: url("/images/workers/worker_blue_normal.png");
    -fx-background-size: cover;
    -fx-opacity: 1;
    -fx-scale-x: 1.3;
    -fx-scale-y: 1.3;
    -fx-scale-z: 1.3;
}

#magentaButton{
    -fx-background-image: url("/images/workers/worker_magenta_pressed.png");
    -fx-background-size: cover;
}

#magentaButton:disabled{
    -fx-opacity: 0.3;
}

#magentaButton:hover {
    -fx-scale-x: 1.05;
    -fx-scale-y: 1.05;
    -fx-scale-z: 1.05;
}

#magentaButton:selected{
    -fx-background-image: url("/images/workers/worker_magenta_normal.png");
    -fx-background-size: cover;
    -fx-opacity: 1;
    -fx-scale-x: 1.3;
    -fx-scale-y: 1.3;
    -fx-scale-z: 1.3;
}

.check-box{
    -fx-font-size: 13pt;
    -fx-font-family: "Agency FB";
    -fx-text-fill: #9b6029;
    -fx-font-weight: bold;
}

.tooltip{
    -fx-font-size: 13pt;
    -fx-font-family: "Agency FB";
    -fx-text-fill: #ffffff;
    -fx-font-weight: normal;
}

#dialogScene{
    -fx-background-image: url("/images/dialog.png");
    -fx-background-size: cover;
}

#dialogLabel {
    -fx-text-alignment: center;
    -fx-wrap-text: true;
}

#dialogTitle {
    -fx-text-alignment: center;
    -fx-wrap-text: true;
    -fx-text-fill: white;
    -fx-font-size: 20pt;
}

#error{
    -fx-text-fill: darkred;
    -fx-font-size: 12pt;
}

#godName{
    -fx-font-size: 19pt;
}

#freeTile{
    -fx-color: #d6ce1b;
    -fx-border-color: #d69600;
    -fx-opacity: 0.5;
}

#freeTile:hover{
    -fx-color: #d6ce1b;
    -fx-border-color: #d69600;
    -fx-opacity: 0.75;
}

#freeTile:selected{
    -fx-color: #d6ce1b;
    -fx-border-color: #d69600;
    -fx-opacity: 0;
}

#freeTile:disabled{
    -fx-color: #d6ce1b;
    -fx-border-color: #d69600;
    -fx-opacity: 1;
}

.StackPane{
    -fx-background-color: #d6ce1b;
    -fx-border-color: #d69600;
}

